# design_patterns_in_python

./: .gitignore  README.md  pyproject.toml
src/solid_principles/: initial_code.py  refactoring_code.py
src/solid_principles/liskov_substitution/: after.py
src/solid_principles/open_close/: after.py
src/solid_principles/single_responsability/: refactoring_code.py
tests/: tests_initial_code.py  tests_integrales.py  tests_refactoring_code.py
tests/test_solid_principles/test_single_responsability/: tests_initial_code.py  tests_integrales.py  tests_refactoring_code.py
tests/tests_solid_principles/tests_liskov_substitution/: tests_after.py
tests/tests_solid_principles/tests_open_close/: tests_after.py  tests_before.py
tests/tests_solid_principles/tests_single_responsability/: tests_functional.py  tests_initial_code.py  tests_refactoring_code.py
